// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.integration.templates.sundog;

import "google/protobuf/timestamp.proto";
import "src/com/google/android/as/oss/dataattribution/proto/attribution_dialog.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/templates/ui_id_token.proto";

import "third_party/protobuf/cpp_features.proto";

option features.(pb.cpp).string_type = VIEW;
option java_package = "com.google.android.as.oss.delegatedui.api.integration.templates.sundog";
option java_multiple_files = true;

// Next Id: 9
message SundogLocationTemplateData {
  string location_name = 1;

  double latitude = 6;

  double longitude = 7;

  string sub_text = 2;
  string source = 3;

  UiIdToken ui_id_token = 4;
  dataattribution.proto.AttributionDialogData attribution_dialog_data = 5
     ;

  string delete_label = 8;
}

// Next Id: 9
message SundogEventTemplateData {
  string event_title = 1;
  string title = 6;
  string sub_text = 2;
  string location_name = 3;

  .google.protobuf.Timestamp start_time = 4;
  .google.protobuf.Timestamp end_time = 5;

  UiIdToken ui_id_token = 7;

  dataattribution.proto.AttributionDialogData attribution_dialog_data = 8
     ;
}
